--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "@types/dedent": "^0.7.0",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
-    "@umijs/core": "3.4.24",
+    "@umijs/core": "3.5.0-beta.1",
     "@umijs/plugin-analytics": "^0.2.2",
     "@umijs/preset-dumi": "^1.1.6",
-    "@umijs/test": "3.4.24",
-    "@umijs/test-utils": "3.4.24",
-    "@umijs/utils": "3.4.24",
+    "@umijs/test": "3.5.0-beta.1",
+    "@umijs/test-utils": "3.5.0-beta.1",
+    "@umijs/utils": "3.5.0-beta.1",
     "benchmark": "^2.1.4",
     "dedent": "^0.7.0",
     "escape-goat": "^3.0.0",
