--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/babel-preset-umi",
-  "version": "3.4.24",
+  "version": "3.5.0-beta.1",
   "description": "@umijs/babel-preset-umi",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -27,11 +27,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/deps": "3.4.24",
     "@babel/runtime": "7.12.5",
-    "@umijs/babel-plugin-auto-css-modules": "3.4.24",
-    "@umijs/babel-plugin-import-to-await-require": "3.4.24",
-    "@umijs/babel-plugin-lock-core-js-3": "3.4.24",
-    "@umijs/babel-plugin-no-anonymous-default-export": "3.4.24"
+    "@umijs/babel-plugin-auto-css-modules": "3.5.0-beta.1",
+    "@umijs/babel-plugin-import-to-await-require": "3.5.0-beta.1",
+    "@umijs/babel-plugin-lock-core-js-3": "3.5.0-beta.1",
+    "@umijs/babel-plugin-no-anonymous-default-export": "3.5.0-beta.1",
+    "@umijs/deps": "3.5.0-beta.1"
   }
 }
