--- a/examples/lint/package.json
+++ b/examples/lint/package.json
@@ -7,8 +7,10 @@
     "lint:es": "umi lint --eslint-only",
     "lint:es-fix": "umi lint --eslint-only --fix",
     "lint:style": "umi lint --stylelint-only",
-    "lint:style-fix": "umi lint --stylelint-only --fix"
+    "lint:style-fix": "umi lint --stylelint-only --fix",
+    "start": "npm run dev"
   },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^8.11.0",
     "stylelint": "^14.6.0",
