--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -11,10 +11,10 @@
     "dva-core": "^2.0.4",
     "fast-deep-equal": "3.1.3",
     "framer-motion": "6.2.9",
-    "react-redux": "^8.0.0-beta.1",
+    "react-redux": "^7.2.8",
     "redux": "^4.1.2",
-    "swiper": "^8.0.7",
-    "swr": "1.2.2",
+    "swiper": "^8.1.0",
+    "swr": "1.3.0",
     "umi": "4.0.0-rc.11"
   }
 }
