--- a/package.json
+++ b/package.json
@@ -62,25 +62,25 @@
     "lint-staged": "^12.3.7",
     "matcher": "^5.0.0",
     "only-allow": "^1.1.0",
-    "playwright-chromium": "^1.20.1",
-    "prettier": "^2.6.0",
+    "playwright-chromium": "^1.20.2",
+    "prettier": "^2.6.2",
     "prettier-plugin-organize-imports": "^2.3.4",
-    "prettier-plugin-packagejson": "^2.2.16",
+    "prettier-plugin-packagejson": "^2.2.17",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "^0.13.9",
     "resolve": "^1.22.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
-    "turbo": "^1.2.1",
-    "typescript": "^4.6.2",
-    "uglify-js": "^3.15.3",
+    "turbo": "^1.2.2",
+    "typescript": "^4.6.3",
+    "uglify-js": "^3.15.4",
     "umi": "workspace:*",
     "zx": "^4.3.0"
   },
+  "packageManager": "pnpm@6.20.0",
   "engines": {
     "node": ">=14",
     "pnpm": ">=6.20.0"
-  },
-  "packageManager": "pnpm@6.20.0"
+  }
 }
