--- a/examples/bigfish/tsconfig.json
+++ b/examples/bigfish/tsconfig.json
@@ -11,7 +11,8 @@
     "strict": true,
     "paths": {
       "@/*": ["*"],
-      "@@/*": ["./.umi/*"]
+      "@@/*": ["./.umi/*"],
+      "@fs/*": ["*"]
     },
     "allowSyntheticDefaultImports": true
   },
