--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@codesandbox/sandpack-react": "0.19.6",
     "antd": "4.20.2",
+    "axios": "^0.27.2",
     "dva-core": "^2.0.4",
     "fast-deep-equal": "3.1.3",
     "framer-motion": "6.3.3",
