--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:force": "umi-scripts turbo --cmd build --no-cache",
     "build:release": "umi-scripts turbo --cmd build --no-cache -- --declarationMap false",
     "check:packageFiles": "umi-scripts checkPackageFiles",
+    "cov": "jest --coverage",
     "dep:update": "pnpm up --interactive --latest --recursive",
     "dev": "umi-scripts turbo --cmd dev",
     "doc:build": "pnpm doc:deps && umi build",
