--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
         run: pnpm i
 
       - run: pnpm build
-      - run: pnpm tsc --noEmit
+      - run: pnpm tsc:check
       - run: pnpm test
         env:
           CI: true
