--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
   "devDependencies": {
     "@pnpm/lockfile-file": "^5.0.3",
     "@pnpm/logger": "^4.0.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "@types/resolve": "^1.20.2",
+    "@types/rimraf": "3.0.2",
     "@umijs/bundler-esbuild": "workspace:*",
     "@umijs/bundler-utils": "workspace:*",
     "@umijs/bundler-vite": "workspace:*",
