--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -52,13 +52,13 @@ jobs:
         run: pnpm i
 
       - name: Build example-max
-        run: pnpx umi-scripts turbo  --cmd build --filter ./examples/max...
+        run: pnpm umi-scripts turbo --cmd build --filter ./examples/max...
 
       - uses: cypress-io/github-action@v4
         with:
           start: pnpm run preview
           wait-on: 'http://127.0.0.1:9527'
-          command: pnpm run e2e  -- --record --key 0483223d-3e79-4284-b87a-d49dcfe9faab
+          command: pnpm run e2e --record --key 0483223d-3e79-4284-b87a-d49dcfe9faab
           browser: chrome
           working-directory: ./examples/max
           install: false
