--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
   "devDependencies": {
     "@pnpm/lockfile-file": "^5.0.3",
     "@pnpm/logger": "^4.0.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "@types/resolve": "^1.20.2",
+    "@types/rimraf": "3.0.2",
     "@umijs/bundler-esbuild": "workspace:*",
     "@umijs/bundler-utils": "workspace:*",
     "@umijs/bundler-vite": "workspace:*",
@@ -86,10 +88,10 @@
     "umi-scripts": "workspace:*",
     "zx": "^4.3.0"
   },
-  "packageManager": "pnpm@6.32.0",
+  "packageManager": "pnpm@7.3.0",
   "engines": {
     "node": ">=14",
-    "pnpm": ">=6.20.0"
+    "pnpm": ">=7"
   },
   "pnpm": {
     "peerDependencyRules": {
