--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -2,11 +2,11 @@
   "name": "@umijs/babel-preset-umi",
   "version": "4.0.0-canary.20220624.1",
   "description": "Official babel preset for umi.",
-  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/babel-preset-umi#readme",
-  "bugs": "https://github.com/umijs/umi-next/issues",
+  "homepage": "https://github.com/umijs/umi/tree/master/packages/babel-preset-umi#readme",
+  "bugs": "https://github.com/umijs/umi/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/umijs/umi-next"
+    "url": "https://github.com/umijs/umi"
   },
   "license": "MIT",
   "main": "dist/index.js",
