--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@umijs/bundler-utils",
   "version": "4.0.0-canary.20220624.1",
-  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-utils#readme",
-  "bugs": "https://github.com/umijs/umi-next/issues",
+  "homepage": "https://github.com/umijs/umi/tree/master/packages/bundler-utils#readme",
+  "bugs": "https://github.com/umijs/umi/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/umijs/umi-next"
+    "url": "https://github.com/umijs/umi"
   },
   "license": "MIT",
   "main": "dist/index.js",
