--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -2,11 +2,11 @@
   "name": "@umijs/plugin-docs",
   "version": "4.0.0-canary.20220624.1",
   "description": "@umijs/plugin-docs",
-  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/plugin-docs#readme",
-  "bugs": "https://github.com/umijs/umi-next/issues",
+  "homepage": "https://github.com/umijs/umi/tree/master/packages/plugin-docs#readme",
+  "bugs": "https://github.com/umijs/umi/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/umijs/umi-next"
+    "url": "https://github.com/umijs/umi"
   },
   "license": "MIT",
   "main": "dist/index.js",
