--- a/packages/preset-vue/package.json
+++ b/packages/preset-vue/package.json
@@ -2,11 +2,11 @@
   "name": "@umijs/preset-vue",
   "version": "4.0.0-canary.20220624.1",
   "description": "@umijs/preset-vue",
-  "homepage": "https://github.com/umijs/umi-next/tree/master/packages/preset-vue#readme",
-  "bugs": "https://github.com/umijs/umi-next/issues",
+  "homepage": "https://github.com/umijs/umi/tree/master/packages/preset-vue#readme",
+  "bugs": "https://github.com/umijs/umi/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/umijs/umi-next"
+    "url": "https://github.com/umijs/umi"
   },
   "license": "MIT",
   "main": "dist/index.js",
