--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "chokidar": "3.5.3",
+    "fast-glob": "^3.2.11",
     "pino": "7.11.0"
   },
   "devDependencies": {
