--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "doc:deps-extra": "umi-scripts turbo --cmd build:extra --filter @umijs/plugin-docs...",
     "doc:deps-ts": "umi-scripts turbo --cmd build --filter @umijs/plugin-docs...",
     "doc:dev": "umi dev",
-    "format": "prettier --write .",
-    "format:docs": "prettier 'docs/**/*.{md,mdx}' --write --ignore-path .gitignore --ignore-unknown",
-    "format:plugin-docs": "prettier 'packages/plugin-docs/**/*' --write --ignore-unknown",
+    "format": "prettier --cache --write .",
+    "format:docs": "prettier --cache 'docs/**/*.{md,mdx}' --write --ignore-path .gitignore --ignore-unknown",
+    "format:plugin-docs": "prettier --cache 'packages/plugin-docs/**/*' --write --ignore-unknown",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "umi-scripts postinstall",
     "jest": "jest",
@@ -34,10 +34,10 @@
   },
   "lint-staged": {
     "*.{jsx,less,md,json}": [
-      "prettier --write"
+      "prettier --cache --write"
     ],
     "*.ts?(x)": [
-      "prettier --parser=typescript --write"
+      "prettier --cache --parser=typescript --write"
     ]
   },
   "devDependencies": {
@@ -72,9 +72,9 @@
     "matcher": "^5.0.0",
     "only-allow": "^1.1.0",
     "playwright-chromium": "^1.20.2",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^2.3.4",
-    "prettier-plugin-packagejson": "^2.2.17",
+    "prettier-plugin-packagejson": "^2.2.18",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-text-loop-next": "0.0.3",
