--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@umijs/utils": "workspace:*",
     "@vercel/ncc": "0.33.3",
     "dts-packer": "^0.0.3",
-    "esno": "^0.14.1",
     "expect-playwright": "^0.8.0",
     "git-repo-info": "^2.1.1",
     "husky": "^7.0.4",
@@ -82,6 +81,7 @@
     "resolve": "^1.22.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
+    "tsx": "^3.8.0",
     "turbo": "^1.3.1",
     "typescript": "^4.7.2",
     "uglify-js": "^3.15.4",
