--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@umijs/bundler-utils": "3.5.30",
+    "@umijs/case-sensitive-paths-webpack-plugin": "^1.0.1",
     "@umijs/deps": "3.5.30",
     "@umijs/types": "3.5.30",
     "@umijs/utils": "3.5.30",
