--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@mdx-js/mdx": "2.1.1",
+    "@types/github-slugger": "^1.3.0",
     "@types/keymaster": "^1.6.30",
     "@types/react-helmet": "^6.1.5",
     "classnames": "^2.3.1",
