--- a/codemod/package.json
+++ b/codemod/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/codemod",
-  "version": "0.0.1-alpha.0",
+  "version": "0.1.0",
   "homepage": "https://github.com/umijs/umi/tree/master/codemod",
   "bugs": "https://github.com/umijs/umi/issues",
   "repository": {
