--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "check:packageFiles": "umi-scripts checkPackageFiles",
     "codemod:build": "pnpm --filter @umijs/codemod build",
     "codemod:dev": "pnpm --filter @umijs/codemod build --watch",
+    "codemod:jest": "cd codemod && jest",
     "codemod:release": "umi-scripts releaseCodemod",
     "codemod:run": "BACON=none GIT_CHECK=none ./codemod/bin/umi-codemod.js --cwd codemod/fixtures/tmp",
-    "codemod:test": "BACON=none GIT_CHECK=none umi-scripts testCodemod && cd codemod && jest",
+    "codemod:test": "BACON=none GIT_CHECK=none umi-scripts testCodemod",
     "cov": "jest --coverage",
     "dep:update": "pnpm up --interactive --latest --recursive",
     "dev": "umi-scripts turbo --cmd dev --parallel",
