--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -26,6 +26,7 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
+    "github-slugger": "^1.4.0",
     "keymaster": "1.6.2",
     "react-helmet": "^6.1.0",
     "rehype-pretty-code": "^0.3.1",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@mdx-js/mdx": "2.1.1",
+    "@types/github-slugger": "^1.3.0",
     "@types/keymaster": "^1.6.30",
     "@types/react-helmet": "^6.1.5",
     "classnames": "^2.3.1",
