--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -52,7 +52,7 @@ jobs:
         run: pnpm i
 
       - name: Build targets
-        run: pnpm umi-scripts turbo --cmd build --filter ./examples/max... --filter ./examples/test-test/...
+        run: pnpm umi-scripts turbo build --filter ./examples/max... --filter ./examples/test-test/...
 
       - name: example-max-e2e
         uses: cypress-io/github-action@v4
