--- a/examples/max/package.json
+++ b/examples/max/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "cypress": "^10.0.0",
-    "start-server-and-test": "^1.0.0"
+    "start-server-and-test": "^1.0.0",
+    "tailwindcss": "^3.0.24"
   }
 }
